--- a/style.css
+++ b/style.css
@@ -31,3 +31,13 @@ body {
     color: #777;
 }
 
+.cart-item {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.checkout-btn {
+    width: 100%;
+    margin-top: 1rem;
+}
