--- a/style.css
+++ b/style.css
@@ -59,3 +59,45 @@ body {
     outline: 2px solid hsl(26, 100%, 55%);
     opacity: 1;
 }
+
+.lightbox {
+    position: fixed;
+    inset: 0;
+    z-index: 200;
+}
+
+.overlay {
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.75);
+}
+
+.lightbox-content {
+    position: relative;
+    max-width: 500px;
+    margin: auto;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.lightbox-main {
+    width: 100%;
+    border-radius: 15px;
+}
+
+.close-lightbox {
+    position: absolute;
+    top: -40px;
+    right: 0;
+    font-size: 24px;
+    color: white;
+}
+
+.prev, .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.prev { left: -40px; }
+.next { right: -40px; }
