feat: attempt to space out header items in mobile view

--- a/style.css
+++ b/style.css
@@ -299,6 +299,10 @@ body {
 }
 
 @media (max-width: 768px) {
+    .header {
+        justify-content: space-between;
+    }
+
     .nav-links {
         display: none;
     }
