--- a/style.css
+++ b/style.css
@@ -303,19 +303,29 @@ body {
         justify-content: space-between;
     }
 
+    .nav-right {
+        gap: 0.5rem;
+    }
+
     .nav-links {
         display: none;
     }
 
     .product {
         flex-direction: column;
+        padding: 1rem;
     }
+
     .actions {
         flex-direction: column;
     }
 
     .quantity {
         width: 100%;
+    }
+
+    .add-to-cart {
+        height: 60px;
     }
 
     .thumbnails{
