--- a/style.css
+++ b/style.css
@@ -325,12 +325,10 @@ body {
         flex-direction: column;
     }
 
-    .quantity {
-        width: 100%;
-    }
-
+    .quantity,
     .add-to-cart {
-        height: 60px;
+        width: 100%;
+        height: 50%;
     }
 
     .thumbnails{
