--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ body {
     gap: 0.5rem;
 }
 
+.cart-wrapper {
+    position: relative;
+}
+
 .cart-dropdown {
     position: absolute;
     top: 80px;
@@ -311,11 +315,11 @@ body {
 }
 
 .mobile-prev {
-    left: 16px;
+    left: 10px;
 }
 
 .mobile-next {
-    right: 16px;
+    right: 10px;
 }
 
 .mobile-prev:active,
