--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
     padding: 2rem;
     border-bottom: 1px solid rgb(193, 191, 191);
     max-height: 90px;
+    position: relative;
+    z-index: 1000;
 }
 
 .nav-left {
@@ -343,6 +345,14 @@ body {
 
     .nav-links {
         display: none;
+    }
+
+    .cart-dropdown {
+        position: fixed;
+        top: 60px;
+        right: 5%;
+        width: 90%;
+        max-width: 360px;
     }
 
     .product {
