--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ body {
     gap: 6rem;
 }
 
+.menu-btn {
+    display: none;
+}
+
 .nav-left img {
     margin-right: 2px;
 }
@@ -332,11 +336,17 @@ body {
 @media (max-width: 1000px) {
     .header {
         justify-content: space-between;
-        gap: 2rem;
+        gap: 1rem;
     }
 
     .nav-left img {
         width: 150px;
+        position: absolute;
+        left: 20%;
+    }
+
+    .menu-btn {
+        display: block;
     }
 
     .nav-right {
