--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     border-bottom: 1px solid rgb(193, 191, 191);
     max-height: 90px;
     position: relative;
-    z-index: 1000;
+    z-index: 500;
 }
 
 .nav-left {
@@ -277,6 +277,7 @@ body {
     position: fixed;
     inset: 0;
     z-index: 300;
+    margin: 10px;
 }
 
 .mobile-overlay {
@@ -289,11 +290,15 @@ body {
     position: absolute;
     left: 0;
     top: 0;
-    width: 70%;
-    height: 100%;
-    background: white;
+    width: 40%;
+    height: 85%;
+    background: hsl(26, 64%, 62%);
     padding: 2rem;
     transform: translateX(-100%);
+    display: flex;
+    flex-direction: column;
+    z-index: 500;
+    border-radius: 10px;
 }
 
 .mobile-menu.active .mobile-nav {
@@ -347,6 +352,22 @@ body {
 
     .menu-btn {
         display: block;
+    }
+
+    .mobile-nav {
+        gap: 2rem;
+        z-index: 1000;
+    }
+
+    .mobile-nav a {
+        font-weight: bold;
+        font-size: 20px;
+        color: rgb(248, 242, 242);
+        text-decoration: none;
+    }
+
+    .mobile-nav a:hover {
+        color: black;
     }
 
     .nav-right {
